# stencil-lifting

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  auto_compile.py  auto_translate.py  cmake option.txt  sdsl.py  translate.py
examples/CloverLeaf_Stencil/: accelerate_kernel_loop82.f90  accelerate_kernel_loop83.f90  accelerate_kernel_loop84.f90  accelerate_kernel_loop85.f90  accelerate_kernel_loop86.f90  advec_cell_kernel_loop91.f90  advec_cell_kernel_loop92.f90  advec_cell_kernel_loop93.f90  advec_cell_kernel_loop94.f90  advec_cell_kernel_loop95.f90  advec_cell_kernel_loop96.f90  advec_mom_kernel_loop100.f90  advec_mom_kernel_loop101.f90  advec_mom_kernel_loop102.f90  advec_mom_kernel_loop103.f90  advec_mom_kernel_loop104.f90  advec_mom_kernel_loop105.f90  advec_mom_kernel_loop106.f90  advec_mom_kernel_loop107.f90  advec_mom_kernel_loop108.f90  advec_mom_kernel_loop97.f90  advec_mom_kernel_loop98.f90  advec_mom_kernel_loop99.f90  field_summary_kernel_loop81.f90  flux_calc_kernel_loop89.f90  flux_calc_kernel_loop90.f90  generate_chunk_kernel_loop77.f90  generate_chunk_kernel_loop78.f90  generate_chunk_kernel_loop79.f90  generate_chunk_kernel_loop80.f90  initialise_chunk_kernel_loop10.f90  initialise_chunk_kernel_loop11.f90  initialise_chunk_kernel_loop12.f90  initialise_chunk_kernel_loop13.f90  initialise_chunk_kernel_loop14.f90  initialise_chunk_kernel_loop15.f90  initialise_chunk_kernel_loop16.f90  initialise_chunk_kernel_loop8.f90  initialise_chunk_kernel_loop9.f90  pack_kernel_loop2.f90  (+69 more)
examples/MG_loop/: mg_loop0.f90  mg_loop1.f90  mg_loop10.f90  mg_loop11.f90  mg_loop12.f90  mg_loop13.f90  mg_loop14.f90  mg_loop15.f90  mg_loop18.f90  mg_loop2.f90  mg_loop3.f90  mg_loop4.f90  mg_loop5.f90  mg_loop6.f90  mg_loop8.f90  mg_loop9.f90
examples/WRF_Dyn_em/: module_diffusion_em_loop27.f90  module_diffusion_em_loop33.f90  module_diffusion_em_loop35.f90  module_diffusion_em_loop38.f90  module_diffusion_em_loop39.f90
examples/ablation/: conv.f90  conv_b.f90  conv_i.f90  conv_p.f90  conv_t.f90  conv_to.f90  conv_u.f90  conv_uo.f90  heat.f90  heat27.f90  heat27_b.f90  heat27_i.f90  heat27_p.f90  heat27_t.f90  heat27_to.f90  heat27_u.f90  heat27_uo.f90  heat_b.f90  heat_i.f90  heat_p.f90  heat_t.f90  heat_to.f90  heat_u.f90  heat_uo.f90  jacobi.f90  jacobi_b.f90  jacobi_i.f90  jacobi_p.f90  jacobi_t.f90  jacobi_to.f90  jacobi_u.f90  jacobi_uo.f90
examples/benchmarks/: ackl93.f90  ackl95.f90  ackl96.f90  akl82.f90  amkl102.f90  amkl103.f90  amkl104.f90  amkl106.f90  amkl108.f90  cdkl.f90  computegradient.f  computewcnew.f  getadvancerate.f  grad.f90  igkl.f90  mbel10.f90  mbel16.f90  mdel10.f90  mdel13.f90  mdel16.f90  mdel18.f90  mdel24.f90  mdel26.f90  mdel27.f90  mdel29.f90  mdel3.f90  mdel30.f90  mdel33.f90  mdel34.f90  mdel35.f90  mdel36.f90  mdel37.f90  mdel5.f90  mdel6.f90  mdel9.f90  mgl11.f90  mgl12.f90  mgl13.f90  mgl14.f90  mgl3.f90  (+14 more)
examples/gen_code/: ackl91_halide.cpp  ackl93_halide.cpp  ackl94_halide.cpp  ackl96_halide.cpp  akl82_halide.cpp  amkl101_halide.cpp  amkl102_halide.cpp  amkl103_halide.cpp  amkl104_halide.cpp  amkl106_halide.cpp  amkl108_halide.cpp  amkl98_halide.cpp  cdkl_halide.cpp  computegradient_halide.cpp  computewcnew_halide.cpp  div_halide.cpp  getadvancerate_halide.cpp  grad_halide.cpp  heat_halide.cpp  igkl_halide.cpp  makefile  mbel10_halide.cpp  mbel16_halide.cpp  mdel10_halide.cpp  mdel13_halide.cpp  mdel16_halide.cpp  mdel18_halide.cpp  mdel24_halide.cpp  mdel26_halide.cpp  mdel27_halide.cpp  mdel29_halide.cpp  (+30 more)
scripts/: auto_compile.py  auto_perf.py  auto_translate.py  nameset.json  nameset.py  plot.py  stng-perf.json  translate.py
(+218 files in other folders)
